<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/statistics_radio_group"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/weekly_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/weekly"/>

        <RadioButton
            android:id="@+id/monthly_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/monthly"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/custom_date_boundary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryBright"
        android:gravity="center">

        <TextView
            android:id="@+id/start_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2017-05-02"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fromto"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/end_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2017-05-02"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/statistics_item_income_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/income"/>

        <TextView
            android:id="@+id/statistics_item_outcome_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/outcome"/>

        <TextView
            android:id="@+id/statistics_item_total_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/total"/>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/horizontaldivider"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/statistics_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>